--- a/src/pages/cupon/cupon.html
+++ b/src/pages/cupon/cupon.html
@@ -14,10 +14,9 @@
 
 
 <ion-content padding>
-
   <ion-card>
     <img src="assets/imgs/logo.png" alt="Logo" class="logo" />
-    <img src="http://www.codigos-qr.com/qr/php/qr_img.php?d=https%3A%2F%2Filovealcazar.com&s=6&e=m" alt="Código QR" class="rota-horizontal"
+    <img src="http://www.codigos-qr.com/qr/php/qr_img.php?d=http%3A%2F%2Fmundipromo.com&s=8&e=m" alt="Código QR" class="rota-horizontal"
     />
     <ion-card-content>
       <p wrap-text> Haz un pantallazo de este cupón, y preséntalo en :</p>
