--- a/ul_web_hooks/android/android_web_hook.html
+++ b/ul_web_hooks/android/android_web_hook.html
@@ -15,8 +15,8 @@ You can just copy-paste them in the <header> section of the appropriate pages of
 -->
 
 <head>
-<link rel="alternate" href="android-app://com.ilovealcazar.com/https/https://m6xny.app.goo.gl" />
-<link rel="alternate" href="android-app://com.ilovealcazar.com/https/promosapp-f65a4.firebaseapp.com/__/auth/callback" />
+<link rel="alternate" href="android-app://com.mundipromo.com/https/https://m6xny.app.goo.gl" />
+<link rel="alternate" href="android-app://com.mundipromo.com/https/promosapp-f65a4.firebaseapp.com/__/auth/callback" />
 
 <!-- Your other stuff from the head tag -->
 </head>
